uploaded previous work
uploaded previous work from before moving to github pages, added link to main page

--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
     </head>
     <body>
         <h1>hello world!</h1>
+        <p>projects</p>
+        <ul>
+            <li><a href="introduction/index.html">introduction site</a></li>
+        </ul>
     </body>
 </html>
