--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>eric's place</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>hello world!</h1>
