--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>eric's place</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="icon.gif">
     </head>
     <body>
         <h1>hello world!</h1>
