--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
         <link rel="icon" href="icon.gif">
     </head>
     <body>
-        <h1>hello world!</h1>
-        <p>projects</p>
+        <p>project directory</p>
         <ul>
             <li><a href="introduction/index.html">introduction site</a></li>
         </ul>
