--- a/index.html
+++ b/index.html
@@ -3,12 +3,24 @@
     <head>
         <title>eric's place</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" href="icon.gif">
+        <link rel="icon" href="icon.png">
     </head>
     <body>
-        <p>project directory</p>
-        <ul>
-            <li><a href="introduction/index.html">introduction site</a></li>
-        </ul>
+        <div id="left">
+            <div class="intro">
+                <p>eric couture's class site</p>
+                <p>gdes 308 handmade web</p>
+                <p>summer 2022</p>
+            </div>
+            <hr style="width: 80%; align-content: center;">
+            <p>project directory</p>
+            <ul>
+                <li><a href="introduction/index.html">introduction site</a></li>
+            </ul>
+            
+        </div>
+        <div id="right">
+            
+        </div>
     </body>
 </html>
