added flexbox exercise, added links to home

--- a/box-model/index.html
+++ b/box-model/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="back-to-home"><a href="../index.html">back to home</a></div>
         <div class="content">some text</div>
         <div class="border">border box</div>
     </body>
