--- a/index.html
+++ b/index.html
@@ -16,11 +16,14 @@
             <p>project directory</p>
             <ul>
                 <li><a href="introduction/index.html">introduction site</a></li>
+                <li><a href="flex-exercise/index.html">flexbox exercise</a></li>
             </ul>
             
             <p>other</p>
             <ul>
                 <li><a href="journals.html">journals</a></li>
+                <li><a href="box-model/index.html">box model practice</a></li>
+                <li><a href="flexbox-practice/index.html">flexbox practice</a></li>
             </ul>
             
         </div>
