added pages, updated links
added animation, interaction, and in progress screensaver pages

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <ul>
                 <li><a href="introduction/index.html">introduction site</a></li>
                 <li><a href="flex-exercise/index.html">flexbox exercise</a></li>
+                <li><a href="screensaver/index.html">screensaver</a><span style="color: red; font-style: italic;"> [IN PROGRESS]</span></li>
             </ul>
             
             <p>other</p>
@@ -24,6 +25,8 @@
                 <li><a href="journals.html">journals</a></li>
                 <li><a href="box-model/index.html">box model practice</a></li>
                 <li><a href="flexbox-practice/index.html">flexbox practice</a></li>
+                <li><a href="animation/index.html">animation practice</a></li>
+                <li><a href="interaction/index.html">interaction practice</a></li>
             </ul>
             
         </div>
