--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="introduction/index.html">introduction site</a></li>
                 <li><a href="flex-exercise/index.html">flexbox exercise</a></li>
-                <li><a href="screensaver/index.html">screensaver</a><span style="color: red; font-style: italic;"> [IN PROGRESS]</span></li>
+                <li><a href="screensaver/index.html">screensaver</a>
             </ul>
             
             <p>other</p>
@@ -27,6 +27,7 @@
                 <li><a href="flexbox-practice/index.html">flexbox practice</a></li>
                 <li><a href="animation/index.html">animation practice</a></li>
                 <li><a href="interaction/index.html">interaction practice</a></li>
+                <li><a href="responsiveness-practice/index.html">responsive practice</a></li>
             </ul>
             
         </div>
