--- a/journals.html
+++ b/journals.html
@@ -11,6 +11,7 @@
               <h6><a href="../index.html">back to home</a></h6>
             <p class="caption">journals index</p>
             <ul>
+                <li><i>07/06/22</i> <a href="#journal6">aura writing</a></li>
                 <li><i>07/04/22</i> <a href="#jounral5">mindy seu - the poetry of tools</a></li>
                 <li><i>06/26/22</i> <a href="#journal4">callum copely - a friend is writing</a></li>
                 <li><i>06/20/22</i> <a href="#journal3">ursla k. le guin - a rant about "technology"</a></li>
@@ -18,6 +19,16 @@
                 <li><i>06/14/22</i> <a href="#journal1">j.r. carpenter - a handmade web</a></li>
             </ul>
             <hr>
+            <p class="caption" id="journal6"><i>07/06/22</i> aura</p>
+            <p>spinning<br>
+            joy of creation<br>
+            medication, focusing, working<br>
+            being overwhelmed, needing to be alone<br>
+            living at home<br>
+            vermont<br>
+             rurality</p>
+
+            <p>walking amongst trees. the frogs at night. i can see four farms from my house. what does that mean. notions of belonging and home. i want to sink into the grass. the trees breathe at night. i can disappear. i’m mowing a lawn. exausted. knitting. cold in the basement. sweating outside. people walking around upstairs. pieces of my childhood i get mailed to me frequently. hiding the food i’m eating. wanting to be alone. wanting to be near. the fog obscures the valley below. i don’t want to go to school. philo in the periphery. turkeys on the lawn. i saw a deer last night. laying on the roof is the only thing bringing me peace. stars above, stars in my vision as i sit still trying to hold myself in one piece. do not disturb. i am floating 4 feet above myself.</p>
             <p class="caption" id="journal5"><i>07/04/22</i> mindy seu - the poetry of tools</p>
             <p>This is going to start with a bit of a tangent but I do promise it’s going somewhere. I think that I first really wanted to take this class when I was in a bit of an intense web art phase. This was primarily in the Spring and Fall of 2021. Having spent basically all of the previous two years online I was enthralled with all that I could do with it. Having grown up online, but with strict rules surrounding screentime while I was a child, the opportunity to spend a basically unlimited amount of time on the computer was a novelty. I relished that, and it lasted a long time. This past semester though, I’ve grown more and more disillusioned with the web and the internet. It’s something that still plays a major, MAJOR role in my life, but there have been more and more times when I’ve needed to step away lately. When struggling with major mental health issues, and struggling to feel as if anything I’m experiencing is real and/or worth it, I often need something more tangible, alive, real, than the ephemerality of online. I don’t think that it’s me growing to hate the web at all, although I do often hate what’s become of my childhood escape. I just think it’s me realizing I need a balance. The novelty’s worn off, and I need more physical grounding.</p>
             
