--- a/javascript/index.html
+++ b/javascript/index.html
@@ -19,7 +19,9 @@
                   
             </ul>
         </div>
-        
+
+        <div class='marquee'>Lorem ipsum dolor sit amet, consectetur adipiscing elit END.Lorem ipsum dolor sit amet, consectetur adipiscing elit END.Lorem ipsum dolor sit amet, consectetur adipiscing elit END.Lorem ipsum dolor sit amet, consectetur adipiscing elit END.</div>
+
         <script src="jquery-3.6.0.min.js"></script>
         <script src="jquery.marquee.min.js"></script>
         <script src="functions.js"></script>
