--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <ul>
                 <li><a href="introduction/index.html">introduction site</a></li>
                 <li><a href="flex-exercise/index.html">flexbox exercise</a></li>
-                <li><a href="screensaver/index.html">screensaver</a>
+                <li><a href="screensaver/index.html">screensaver</a></li>
+                <li><a href="aura/index.html">aura</a></li>
             </ul>
             
             <p>other</p>
@@ -28,6 +29,7 @@
                 <li><a href="animation/index.html">animation practice</a></li>
                 <li><a href="interaction/index.html">interaction practice</a></li>
                 <li><a href="responsiveness-practice/index.html">responsive practice</a></li>
+                <li><a href="javascript/index.html">javascript practice</a></li>
             </ul>
             
         </div>
