updated aura gif src

--- a/aura/index.html
+++ b/aura/index.html
@@ -11,19 +11,19 @@
     <pre class="ascii-box"></pre>
     <div class="overall-container">
        <div class="row1">
-            <div class="gif-box"><img draggable=false src="img/1.gif"></div>
-            <div class="gif-box"><img src="img/2.gif"></div>
+            <div class="gif-box"><img draggable=false src="/img/1.gif"></div>
+            <div class="gif-box"><img src="/img/2.gif"></div>
             <div class="gif-box"><img src="img/3.gif"></div>
        </div>
        <div class="row2">
-           <div class="gif-box"><img src="img/4.gif"></div>
-           <div class="gif-box"><img src="img/5.gif"></div>
-           <div class="gif-box"><img src="img/6.gif"></div>
+           <div class="gif-box"><img src="/img/4.gif"></div>
+           <div class="gif-box"><img src="/img/5.gif"></div>
+           <div class="gif-box"><img src="/img/6.gif"></div>
        </div>
     <div class="row3">
-        <div class="gif-box"><img src="img/7.gif"></div>
-        <div class="gif-box"><img src="img/8.gif"></div>
-        <div class="gif-box"><img src="img/9.gif"></div>
+        <div class="gif-box"><img src="/img/7.gif"></div>
+        <div class="gif-box"><img src="/img/8.gif"></div>
+        <div class="gif-box"><img src="/img/9.gif"></div>
     </div>
     </div>
 
