update journals.html, add router.jpg

--- a/journals.html
+++ b/journals.html
@@ -11,6 +11,7 @@
               <h6><a href="../index.html">back to home</a></h6>
             <p class="caption">journals index</p>
             <ul>
+                <li><i>07/11/22</i> <a href="#jounral7">frank chimero - the good room</a></li>
                 <li><i>07/06/22</i> <a href="#journal6">aura writing</a></li>
                 <li><i>07/04/22</i> <a href="#jounral5">mindy seu - the poetry of tools</a></li>
                 <li><i>06/26/22</i> <a href="#journal4">callum copely - a friend is writing</a></li>
@@ -19,6 +20,11 @@
                 <li><i>06/14/22</i> <a href="#journal1">j.r. carpenter - a handmade web</a></li>
             </ul>
             <hr>
+            <p class="caption" id="journal7"><i>07/11/22</i> frank chimero - the good room</p>
+            <p>I love the way that Frank Chimero approaches technology. Holistically looking at how it effects his life, and the lives of the people around him. But notably, without trying to take any sort of moral high ground. Acknowledging that with how ingrained technology is in our every day lives, there’s no real way that one can approach it in a non-contradictory or reasonable way. You sort of just have to make it work for you in a way that works for you. There’s no real solution, you just have to practice self control and regulation, in whatever capacity you need. That resonates deeply with me. I think that there’s nothing really new he says here in particular I don’t think. But I appreciated hearing it again, from this personal point of view.</p>
+
+            <p>There were a couple quotes that stuck out to me. Ones about the idea of “spiritual technology” in particular. The intersections between religion and the web are endlessly fascinating to me. Growing up religious and sort of coming back into an idea of spirituality in the past couple years has been an interesting experience with the sudden rise of the role of technology in my life. I don’t know what else to write here. Take this image.</p>
+            <img src="router.jpg" style="width: 25vw;">
             <p class="caption" id="journal6"><i>07/06/22</i> aura</p>
             <p>spinning<br>
             joy of creation<br>
