add link to final project

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="flex-exercise/index.html">flexbox exercise</a></li>
                 <li><a href="screensaver/index.html">screensaver</a></li>
                 <li><a href="aura/index.html">aura</a></li>
+                <li><a href="http://handmade-web.club" target="_blank" rel="noopener noreferrer">handmade-web.club (final project)</a></li>
             </ul>
             
             <p>other</p>
